oxiplate-derive/tests/broken/for/else-after-else.stderr
error: `else` previously present in this `for` statement; expected `endfor`
 --> tests/broken/for/else-after-else.rs:9:4
  |
9 | {% else %}
  |    ^^^^

error: `else` previously present in this `for` statement; expected `endfor`
  --> tests/broken/for/else-after-else.rs:11:4
   |
11 | {% else %}
   |    ^^^^

error: Unexpected 'else' statement
  --> tests/broken/for/else-after-else.rs:14:4
   |
14 | {% else %}")]
   |    ^^^^
